@@ -1,5 +1,7 @@
 === HEAD
 
+* Support case sensitive SQL Server 2012 in MSSQL metadata queries (knut2) (#1049)
+
 * Add Dataset#group_append, for appending to the existing GROUP BY clause (YorickPeterse) (#1047)
 
 * Add inverted_subsets plugin, for creating an inverted subset method for each subset (celsworth) (#1042)
